refine portfolio UI and skills section styling

--- a/about2.html
+++ b/about2.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About — Kelvin Mutwiri</title>
+  <title>About â€” Kelvin Mutwiri</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/about.css">
@@ -16,21 +16,22 @@
       <nav class="nav">
       </nav>
       <div class="nav-actions">
-        <button id="themeToggle2" class="icon-btn" aria-label="Toggle theme">🌙</button>
-        <button id="menuBtn2" class="icon-btn menu-btn" aria-label="Open menu">☰</button>
+        <button id="themeToggle2" class="icon-btn" aria-label="Toggle theme">ðŸŒ™</button>
+        <button id="menuBtn2" class="icon-btn menu-btn" aria-label="Open menu">â˜°</button>
       </div>
     </div>
   </header>
 
   <!-- ================= Mobile Navigation ================= -->
   <div id="mobileNav" class="mobile-nav">
-    <button id="closeMobileNav" class="close-nav">×</button>
+    <button id="closeMobileNav" class="close-nav">Ã—</button>
     <nav class="mobile-links">
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="skills.html">Skills</a>
       <a href="blog.html">Blog</a>
-      <a href="services.html">Services</a>
+
+<a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
       <a href="about.html" class="active">About</a>
     </nav>
@@ -102,7 +103,7 @@
             
             <h3>My Approach</h3>
             <p>My approach is straightforward: understand the problem, build a solution, test it, then improve it. I prefer code that's readable over clever, and designs that work over flashy.</p>
-            <p>I start by asking questions, sketching ideas, then building. I iterate based on what actually works, not what looks good in theory. Performance and accessibility aren't afterthoughts — they're built in from the start.</p>
+            <p>I start by asking questions, sketching ideas, then building. I iterate based on what actually works, not what looks good in theory. Performance and accessibility aren't afterthoughts â€” they're built in from the start.</p>
           </div>
 
           <!-- Timeline Section -->
@@ -110,12 +111,12 @@
             <h2>Where I've Been</h2>
             <ol class="timeline-list">
               <li>
-                <strong>2025–Present</strong>
-                <span>Full‑Stack Development & Freelance Product Work</span>
+                <strong>2025â€“Present</strong>
+                <span>Fullâ€‘Stack Development & Freelance Product Work</span>
                 <p>Building web apps with React, Django and implementing infrastructure automation.</p>
               </li>
               <li>
-                <strong>2024–2025</strong>
+                <strong>2024â€“2025</strong>
                 <span>Systems & Network Admin</span>
                 <p>Managed networks, servers, and on-prem infrastructure for clients and small teams.</p>
               </li>
@@ -142,23 +143,23 @@
             <h2>Certifications & Achievements</h2>
             <div class="cert-grid">
               <div class="cert-card">
-                <img src="assets/images/cert1.png" alt="Full-Stack Web Development">
-                <h3>💻 Full-Stack Web Development</h3>
+                <img src="assets/images/web.jpg" alt="Full-Stack Web Development">
+                <h3>ðŸ’» Full-Stack Web Development</h3>
                 <p>Completed a comprehensive web development course covering React, Django, and APIs.</p>
               </div>
               <div class="cert-card">
-                <img src="assets/images/cert2.png" alt="UI/UX Design Essentials">
-                <h3>🎨 UI/UX Design Essentials</h3>
+                <img src="assets/images/ux.jpg" alt="UI/UX Design Essentials">
+                <h3>ðŸŽ¨ UI/UX Design Essentials</h3>
                 <p>Learned modern design systems, wireframing, and prototyping techniques.</p>
               </div>
               <div class="cert-card">
-                <img src="assets/images/cert3.png" alt="Cloud & Networking">
-                <h3>☁️ Cloud & Networking</h3>
+                <img src="assets/images/network2.jpg" alt="Cloud & Networking">
+                <h3>â˜ï¸ Cloud & Networking</h3>
                 <p>Certified in cloud infrastructure, networking fundamentals, and automation practices.</p>
               </div>
               <div class="cert-card">
-                <img src="assets/images/cert4.png" alt="AI & Automation">
-                <h3>🤖 AI & Automation</h3>
+                <img src="assets/images/ai2.jpg" alt="AI & Automation">
+                <h3>ðŸ¤– AI & Automation</h3>
                 <p>Gained skills in AI integration, chatbots, and workflow automation tools.</p>
               </div>
             </div>
@@ -173,7 +174,7 @@
     <div class="container footer-grid">
       <div>
         <strong>Kelvin Mutwiri</strong>
-        <p>Full‑Stack Developer & Designer</p>
+        <p>Fullâ€‘Stack Developer & Designer</p>
       </div>
 
       <div>
@@ -192,11 +193,12 @@
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="skills.html">Skills</a>
+        <a href="blog.html">Blog</a>
       </div>
     </div>
 
     <div class="copyright">
-      © <span id="year"></span> Kelvin Mutwiri. All rights reserved.
+      Â© <span id="year"></span> Kelvin Mutwiri. All rights reserved.
     </div>
   </footer>
 
@@ -213,3 +215,7 @@
   <script src="assets/js/script.js"></script>
 </body>
 </html>
+
+
+
+
