--- a/projects.html
+++ b/projects.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Projects — Kelvin Mutwiri</title>
+  <title>Projects Kelvin Mutwiri</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <!--style-->
   <link rel="stylesheet" href="assets/css/style.css">
   <!--project style-->
   <link rel="stylesheet" href="assets/css/project.css">
-  <!--js-->
-  <script src="assets/js/project.js"></script>
-
-
   <style>
     /* Center copyright text */
     .site-footer .copyright {
@@ -37,15 +33,15 @@
          <!-- <a href="about.html">About</a> -->
       </nav>
       <div class="nav-actions">
-        <button id="themeToggle3" class="icon-btn" aria-label="Toggle theme">🌙</button>
-        <button id="menuBtn3" class="icon-btn menu-btn" aria-label="Open menu">☰</button>
+        <button id="themeToggle3" class="icon-btn" aria-label="Toggle theme">ðŸŒ™</button>
+        <button id="menuBtn3" class="icon-btn menu-btn" aria-label="Open menu">â˜°</button>
       </div>
     </div>
   </header>
 
   <!-- ================= Mobile Navigation ================= -->
   <div id="mobileNav" class="mobile-nav">
-    <button id="closeMobileNav" class="close-nav">×</button>
+    <button id="closeMobileNav" class="close-nav">Ã—</button>
     <nav class="mobile-links">
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
@@ -61,8 +57,8 @@
     <section class="projects-list" data-reveal>
       <div class="container">
         <div class="section-header">
-          <h1 style="font-size: clamp(2rem, 5vw, 3.5rem); margin-bottom: 0.5rem;">Selected Work</h1>
-          <p style="text-align: center; color: var(--muted); margin-bottom: 2rem;">Things I've built and shipped</p>
+          <h1>Selected Work</h1>
+          <p>Things I've built and shipped</p>
           <div class="filters">
             <button class="chip active" data-filter="all">All</button>
             <button class="chip" data-filter="web">Web</button>
@@ -83,7 +79,7 @@
     <div class="container footer-grid">
       <div>
         <strong>Kelvin Mutwiri</strong>
-        <p>Full‑Stack Developer & Designer — building delightful web experiences.</p>
+        <p>Fullâ€‘Stack Developer & Designer â€” building delightful web experiences.</p>
       </div>
       <div>
         <h4>Contact</h4>
@@ -103,7 +99,7 @@
       </div>
     </div>
     <div class="copyright">
-      © <span id="year"></span> Kelvin Mutwiri. All rights reserved.
+      Â© <span id="year"></span> Kelvin Mutwiri. All rights reserved.
     </div>
   </footer>
 
@@ -121,3 +117,7 @@
   <script src="assets/js/project.js"></script>
 </body>
 </html>
+
+
+
+
