--- a/services.html
+++ b/services.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Services — Kelvin Mutwiri</title>
+  <title>Services â€” Kelvin Mutwiri</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/services.css">
@@ -23,15 +23,15 @@
         <!-- <a href="about.html">About</a> -->
       </nav>
       <div class="nav-actions">
-        <button id="themeToggle6" class="icon-btn" aria-label="Toggle theme">🌙</button>
-        <button id="menuBtn6" class="icon-btn menu-btn" aria-label="Open menu">☰</button>
+        <button id="themeToggle6" class="icon-btn" aria-label="Toggle theme">ðŸŒ™</button>
+        <button id="menuBtn6" class="icon-btn menu-btn" aria-label="Open menu">â˜°</button>
       </div>
     </div>
   </header>
 
   <!-- ================= Mobile Navigation ================= -->
   <div id="mobileNav" class="mobile-nav">
-    <button id="closeMobileNav" class="close-nav">×</button>
+    <button id="closeMobileNav" class="close-nav">Ã—</button>
     <nav class="mobile-links">
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
@@ -120,7 +120,7 @@
       </div>
     </div>
     <div class="copyright">
-      © <span id="year"></span> Kelvin Mutwiri. All rights reserved.
+      Â© <span id="year"></span> Kelvin Mutwiri. All rights reserved.
     </div>
   </footer>
 
@@ -135,3 +135,7 @@
   <script src="assets/js/script.js"></script>
 </body>
 </html>
+
+
+
+
