--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -25,15 +25,15 @@
         <!-- <a href="about.html">About</a> -->
       </nav>
       <div class="nav-actions">
-        <button id="themeToggle4" class="icon-btn" aria-label="Toggle theme">🌙</button>
-        <button id="menuBtn4" class="icon-btn menu-btn" aria-label="Open menu">☰</button>
+        <button id="themeToggle4" class="icon-btn" aria-label="Toggle theme">&#127769;</button>
+        <button id="menuBtn4" class="icon-btn menu-btn" aria-label="Open menu">&#9776;</button>
       </div>
     </div>
   </header>
 
   <!-- ================= Mobile Navigation ================= -->
   <div id="mobileNav" class="mobile-nav">
-    <button id="closeMobileNav" class="close-nav">×</button>
+    <button id="closeMobileNav" class="close-nav">&times;</button>
     <nav class="mobile-links">
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
@@ -50,36 +50,29 @@
   <div class="container contact-grid">
     <div class="contact-left">
       <!-- Centered heading with Email title color -->
-      <h1 class="cmd-prompt" 
-          style="font-size: clamp(2.5rem, 6vw, 3.5rem); margin-bottom: 1.5rem; 
-                 color: #0ff; font-family: 'Poppins', sans-serif; font-weight: 700; text-align: center;">
-        Get in Touch
-      </h1>
+      <h1 class="cmd-prompt contact-heading">Get in Touch</h1>
 
       <!-- Left-aligned intro text, arranged in two lines, no cursor -->
-      <p class="contact-lead-typing" 
-         style="font-size: clamp(1rem, 2.2vw, 1.2rem); margin-bottom: 2rem; min-height: 2.8em; 
-                color: #0f0; font-family: 'Courier New', monospace; font-weight: 600; 
-                overflow: hidden; white-space: pre-wrap; border-right: none; animation: none; text-align: left;">
+      <p class="contact-lead-typing">
         Have an idea, a project, or a collaboration in mind?<br>
-        I’m always open to code, build, and discuss new possibilities.
+        I am always open to code, build, and discuss new possibilities.
       </p>
 
       <!-- Contact links -->
-      <div class="contact-info" style="font-family: 'Courier New', monospace; color: #0f0;">
-        <p><strong style="color: #0ff;">Email</strong><br>
-          <a href="mailto:kelvinkiambi35@gmail.com" style="color: rgb(11, 243, 54); text-decoration: none;">kelvinkiambi35@gmail.com</a>
+      <div class="contact-info">
+        <p><strong>Email</strong><br>
+          <a href="mailto:kelvinkiambi35@gmail.com">kelvinkiambi35@gmail.com</a>
         </p>
-        <p><strong style="color: #0ff;">LinkedIn</strong><br>
+        <p><strong>LinkedIn</strong><br>
           <a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank" rel="noopener" 
-             style="color: rgb(15, 240, 45); text-decoration: none;">linkedin.com/in/kelvin-kiambi</a>
+            >linkedin.com/in/kelvin-kiambi</a>
         </p>
-        <p><strong style="color: #0ff;">GitHub</strong><br>
+        <p><strong>GitHub</strong><br>
           <a href="https://github.com/kelvin482" target="_blank" rel="noopener" 
-             style="color: rgb(13, 220, 27); text-decoration: none;">github.com/kelvin482</a>
+            >github.com/kelvin482</a>
         </p>
-        <p><strong style="color: #0ff;">Phone</strong><br>
-          <a href="tel:+254746310313" style="color: rgb(10, 228, 54); text-decoration: none;">+254 746 310 313</a>
+        <p><strong>Phone</strong><br>
+          <a href="tel:+254746310313">+254 746 310 313</a>
         </p>
       </div>
     </div>
@@ -134,7 +127,7 @@
       </div>
     </div>
     <div class="copyright">
-      © <span id="year"></span> Kelvin Mutwiri. All rights reserved.
+      &copy; <span id="year"></span> Kelvin Mutwiri. All rights reserved.
     </div>
   </footer>
 
@@ -152,3 +145,8 @@
 
 </body>
 </html>
+
+
+
+
+
