--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@
           <a href="mailto:kelvinkiambi35@gmail.com">kelvinkiambi35@gmail.com</a>
         </p>
         <p><strong>LinkedIn</strong><br>
-          <a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank" rel="noopener" 
-            >linkedin.com/in/kelvin-kiambi</a>
+          <a href="https://www.linkedin.com/in/kelvin-mutwiri-01250331b" target="_blank" rel="noopener" 
+            >linkedin.com/in/kelvin-mutwiri-01250331b</a>
         </p>
         <p><strong>GitHub</strong><br>
           <a href="https://github.com/kelvin482" target="_blank" rel="noopener" 
@@ -113,7 +113,7 @@
         <h4>Contact</h4>
         <ul class="socials">
           <li><a href="mailto:kelvinkiambi35@gmail.com">Email</a></li>
-          <li><a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank" rel="noopener">LinkedIn</a></li>
+          <li><a href="https://www.linkedin.com/in/kelvin-mutwiri-01250331b" target="_blank" rel="noopener">LinkedIn</a></li>
           <li><a href="https://github.com/kelvin482" target="_blank" rel="noopener">GitHub</a></li>
           <li><a href="https://twitter.com/kelvin_kiambi" target="_blank" rel="noopener">Twitter</a></li>
           <li><a href="tel:+254746310313">Phone</a></li>
